--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-multi-carousel": "^2.8.4",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
+    "react-tabs": "^6.0.2",
     "sass": "^1.69.5"
   },
   "devDependencies": {
