--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.10.3",
     "sass": "^1.69.5"
   },
   "devDependencies": {
