--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-router-dom": "^6.15.0",
     "react-tabs": "^6.0.2",
     "recharts": "^2.10.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
