--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-multi-carousel": "^2.8.4",
+    "react-player": "^2.14.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-tabs": "^6.0.2",
