--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cookies-next": "^4.1.0",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -27,8 +28,7 @@
     "react-tabs": "^6.0.2",
     "recharts": "^2.10.3",
     "sass": "^1.69.5",
-    "swiper": "^11.0.5",
-    "universal-cookie": "^6.1.1"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
