--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "vite ",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -26,6 +26,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
     "sass": "^1.69.5",
     "swiper": "^11.0.5"
