--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_MAIN_URL = 'https://goldshop.onrender.com/api'
+VITE_MAIN_URL = 'https://cambridge-time.onrender.com/api'
 VITE_IMAGE_URL = 'https://cambridge-files-repository.s3.amazonaws.com/images/'
 VITE_FILE_URL = 'https://cambridge-files-repository.s3.amazonaws.com/pdfs/'
 VITE_CLIENT_ID = 'CqUqBPDsvjHKjSSLFh5IiL2gxXlUjAHHDbI0ACVQ'
