--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-multi-carousel": "^2.8.4",
