--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-icons": "^4.12.0",
+    "react-international-phone": "^4.2.6",
     "react-lazy-load-image-component": "^1.6.0",
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.14.1",
