--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "mdb-react-ui-kit": "^8.0.0",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
